css styling for login modal and profile menu

--- a/react-vite/src/components/LoginFormModal/LoginForm.module.css
+++ b/react-vite/src/components/LoginFormModal/LoginForm.module.css
@@ -1,11 +1,11 @@
 .modal {
   display: flex;
   justify-content: center;
-  align-items: center;
-  position: fixed;
+  /* align-items: center; */
+  /* position: fixed; */
   z-index: 1000;
-  left: 0;
-  top: 0;
+  /* left: 0;
+  top: 0; */
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -13,12 +13,20 @@
   /* Black background with opacity */
 }
 
-.modal-content {
+.login {
+  margin-left: -1px;
+  margin-right: 5px;
+}
+
+.demo {
+  margin-left: -6px;
+}
+.modalContent {
   background-color: #20232a;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 90%;
   max-width: 400px;
   border-radius: 10px;
   /* Rounded corners */
@@ -26,25 +34,28 @@
   color: white;
 }
 
-.modal-content h1 {
+.modalContent h1 {
   font-size: 24px;
   margin-bottom: 20px;
   text-align: center;
 }
 
-.modal-content form {
+.modalContent form {
+  width: 90%;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
+  margin-left: 30px;
 }
 
-.modal-content label {
+.modalContent label {
   margin-bottom: 10px;
+  margin-left: 10px;
   font-weight: 500;
 }
 
-.modal-content input {
-  width: 100%;
+.modalContent input {
+  width: 90%;
   padding: 10px;
   margin-bottom: 20px;
   border: none;
@@ -52,24 +63,24 @@
   box-sizing: border-box;
 }
 
-.modal-button {
+.login, .demo {
   background-color: #61dafb;
   color: #20232a;
-  padding: 10px;
+  /* padding: 10px; */
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
   font-weight: 600;
   transition: background-color 0.3s ease;
-  width: 100%;
+  width: 90%;
   margin-top: 10px;
   /* added */
-  align-self: center;
+  /* align-self: center; */
 
 }
 
-.modal-button:hover {
+.login:hover, .demo:hover {
   background-color: #21a1f1;
 }
 
