--- a/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
+++ b/react-vite/src/components/CardDetailsModal/CardDetailsModal.module.css
@@ -55,6 +55,10 @@
     word-break: break-all;
 }
 
+.completed {
+    text-decoration: line-through;
+}
+
 .clipped {
     overflow: hidden;
     text-overflow: ellipsis;
